--- a/index.html
+++ b/index.html
@@ -1356,7 +1356,7 @@ footer {
       <!-- TDカード（元YDの位置） -->
       <div class="story-card animate">
         <div class="story-card-header">
-          <img src="human_TD.png" alt="T D" class="story-card-img" loading="lazy">
+          <img src="images/team/human_TD.png" alt="T D" class="story-card-img" loading="lazy">
           <h3 class="story-card-title">T D（29）</h3>
           <p class="story-card-subtitle">インフラエンジニア</p>
           <p class="story-card-quote">好きだけでは働けない。本当のワークライフバランス。</p>
