--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ nav a:hover::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.5));
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3));
   z-index: 1;
 }
 
@@ -314,8 +314,8 @@ nav a:hover::after {
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-  object-position: center top;
-  filter: saturate(1.2) contrast(1.1);
+  object-position: center 35%;
+  filter: brightness(0.88) saturate(1.1) contrast(1.05);
   transform: scale(1.05);
   transition: transform 10s ease;
   z-index: 1;
@@ -1253,8 +1253,11 @@ footer {
   }
   
   .hero-bg {
-    height: 60vh;
-    object-position: center 20%;
+    height: 80vh;
+    object-position: center 30%;
+  }
+  .hero::before {
+    background: linear-gradient(to bottom, rgba(0,0,0,0.7), rgba(0,0,0,0.2));
   }
 }
 
